# docks_to_slack

./: .gitignore  FOR_DEVELOPPER.md  README.md  clipboard_utils.py  html_to_slack.py  main.py  pyproject.toml  sample_list.html
.github/workflows/: test.yml
misc/: debug_clipboard.py  dump_clipboard_to_file.py  html_to_slack.py
src/: clipboard_util.py  generate_result.py  pickle_writer.py  slack_list_generator.py
tests/: sample_list.html  test_clipboard_util.py  test_generate_result.py  test_html_to_slack.py  test_main.py  test_pickle_writer.py  test_slack_list_generator.py
